<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tk.paarshvchitra.textilepro.textilepro.yarnDenierActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldtext1"
        android:id="@id/denier"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUnit"
        android:entries="@array/unit_array"
        android:layout_alignTop="@id/denier"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/chosenUnit"
        android:layout_below="@+id/spinnerUnit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/conversionValue"
        android:layout_below="@+id/spinnerUnit"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonConvert"
        android:id="@+id/buttonLdCalculate"
        android:layout_below="@+id/conversionValue"
        android:layout_centerHorizontal="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLinear"
        android:weightSum="2"
        android:layout_below="@+id/buttonLdCalculate">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldDebier"
        android:id="@+id/textView"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldDenierResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondLinear"
        android:weightSum="2"
        android:layout_below="@+id/firstLinear">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldNe"
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldNeResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/thirdLinear"
        android:weightSum="2"
        android:layout_below="@+id/secondLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldNm"
        android:id="@+id/textView3"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldNmResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourthLinear"
        android:weightSum="2"
        android:layout_below="@+id/thirdLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldTex"
        android:id="@+id/textView4"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldTexResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fifthLinear"
        android:weightSum="2"
        android:layout_below="@+id/fourthLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldDtex"
        android:id="@+id/textView5"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldDtexResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sixthLinear"
        android:weightSum="2"
        android:layout_below="@+id/fifthLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldDandee"
        android:id="@+id/textView6"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldDandeeResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seventhLinear"
        android:weightSum="2"
        android:layout_below="@+id/sixthLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldWorsted"
        android:id="@+id/textView7"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldWorstedResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eightLinear"
        android:weightSum="2"
        android:layout_below="@+id/seventhLinear">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ldWoolen"
        android:id="@+id/textView8"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="right" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ldWoolenResult"
        android:layout_weight="0.75"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:background="#d85fccd0"
        android:gravity="center"/>

</LinearLayout>
</RelativeLayout>
