<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="tk.paarshvchitra.textilepro.textilepro.yarnDiameterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choosePolymer"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:entries="@array/arrayPolymer"
        android:id="@+id/spinnerPolymer"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/chooseDiameter"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerPolymer"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:entries="@array/arrayMethod"
        android:id="@+id/spinnerDiaMethod"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinnerPolymer"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/conversionYdValue"
        android:layout_below="@+id/spinnerDiaMethod"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonConvert"
        android:id="@+id/buttonYdCalculate"
        android:layout_below="@+id/conversionYdValue"
        android:layout_centerHorizontal="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLinear"
        android:weightSum="2"
        android:layout_below="@+id/buttonYdCalculate">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ldDensity"
            android:id="@+id/textView1"
            android:layout_weight="1.2"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="right"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ydDensityResult"
            android:layout_weight="0.80"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:background="#d85fccd0"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondLinear"
        android:weightSum="2"
        android:layout_below="@+id/firstLinear">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Denier"
            android:id="@+id/ydDiameterMethod"
            android:layout_weight="1.2"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/ydDiameterResult"
            android:layout_weight="0.80"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:background="#d85fccd0"
            android:gravity="center"/>

    </LinearLayout>


</RelativeLayout>
